# niffler-py-st3

./: docker-compose.yml  index.html
26/: index.html
niffler-tests-python/: .gitignore  README.md  conftest.py  docker-compose.currencymock.yml  pyproject.toml
niffler-tests-python/Pages/: AddSpendingPage.py  BasePage.py  LoginPage.py  MainPage.py  ProfilePage.py  RegistrationPage.py  add_spending_page.py  base_page.py  login_page.py  main_page.py  registration_page.py
niffler-tests-python/clients/: oauth_client.py  spends.py
niffler-tests-python/common/: apisession.py  logging_config.py
niffler-tests-python/components/: archive_category_alert_element.py  header_element.py  logout_alert_element.py  navbar_element.py
niffler-tests-python/database/: authority_db.py  category_db.py  spend_db.py  user_db.py
niffler-tests-python/fixtures/: __init__.py  alerts.py  authorization.py  grpc_fixtures.py  header_element.py  main_page.py  navbar.py  person.py  profile.py  registration.py  soap_fixtures.py  spendings.py
niffler-tests-python/helpers/: currency.py
niffler-tests-python/models/: authority.py  category.py  config.py  enums.py  spend.py  user.py  user_auth.py  user_data.py
niffler-tests-python/page_factory/: button.py  component.py  form.py  input.py  link.py  paragraph.py  select.py  table_sell.py  tag.py  title.py
niffler-tests-python/pages/: add_spending_page.py  base_page.py  login_page.py  main_page.py  profile_page.py  registration_page.py
niffler-tests-python/response_errors/: response_errors.py
niffler-tests-python/settings/: settings.py
(+2488 files in other folders)
