[project]
name = "niffler-py-st3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (==9.0.1)",
    "allure-pytest (==2.15.2)",
    "python-dotenv (==1.2.1)",
    "mimesis (==18.0.0)",
    "requests (==2.32.5)",
    "pytest-playwright (==0.7.2)",
    "playwright (==1.56)",
    "requests-toolbelt (==1.0.0)",
    "psycopg2-binary (==2.9.11)",
    "sqlalchemy (==2.0.44)",
    "sqlmodel (==0.0.27)",
    "pydantic (==2.12.4)",
    "pkce (==1.0.3)",
    "curlify (==2.2.1)"

]


[tool.poetry]
package-mode = false

[tool.pytest]
addopts = [
  "--alluredir=./allure-results"
]
playwright_headless = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
